Move cities endpoint from /admin/cities to /cities
Make it also open to all logged users, so that can be used on client
