# Server/other/controllers/OrganizationRegistration.js
@@ -3,30 +3,6 @@
 let utils = require('../utils/writer.js');
 let OrganizationRegistration = require('../service/OrganizationRegistrationService');
 
-module.exports.adminCitiesGET = function adminCitiesGET(req, res, next) {
-    if (!req.session.loggedin) {
-        res.statusCode = 401;
-        res.statusMessage = "Not authenticated";
-        res.end();
-    }
-    else if (req.session.account_type !== 'system') {
-        res.statusCode = 401;
-        res.statusMessage = "Insufficient permissions";
-        res.end();
-    }
-    else {
-        OrganizationRegistration.adminCitiesGET()
-            .then(function (response) {
-                utils.writeJson(res, response);
-            })
-            .catch(function (response) {
-                res.statusCode = 500;
-                res.statusMessage = "Server error";
-                res.end();
-            });
-    }
-};
-
 module.exports.adminCitiesRegisterPOST = function adminCitiesRegisterPOST(req, res, next) {
     let body = req.swagger.params['body'].value;
 
